Fix shapes z-index

--- a/src/components/UI/BlurredShapes/style.module.scss
+++ b/src/components/UI/BlurredShapes/style.module.scss
@@ -1,6 +1,6 @@
 .shape {
   position: absolute;
-  z-index: 0;
+  z-index: -1;
   top: 0;
   left: 0;
   right: unset;
